fix: icon alignment

--- a/assets/scss/woocommerce/_buttons.scss
+++ b/assets/scss/woocommerce/_buttons.scss
@@ -70,12 +70,11 @@
 //<editor-fold [AJAX add-to-cart loading]>
 .woocommerce {
 	#respond input#submit.loading, a.button.loading, button.button.loading, input.button.loading {
+		display: flex;
+		align-items: center;
+		column-gap: 4px;
 		&::after {
-			display: block;
 			position: initial;
-			float: right;
-			margin-left: 5px;
-			margin-top: 1px;
 		}
 	}
 }
